--- a/css/style.css
+++ b/css/style.css
@@ -637,7 +637,18 @@ body {
   background: url("../img/slider_img2.jpg") center/cover no-repeat;
 }
 
+.promo.contacts {
+  margin-bottom: 10px;
+}
+/********************************/
+/********* MAP ******************/
+/********************************/
 
+#map {
+  width: 100%;
+  min-height: 500px;
+  background-color: grey;
+}
 
 
 /*****************************************/
