--- a/css/style.css
+++ b/css/style.css
@@ -450,7 +450,7 @@ body {
 }
 
 .response-text {
-  flex: 50% 0 0;
+  width: 50%;
   background-color: #686B86;
   padding: 8%;
 
@@ -473,7 +473,7 @@ body {
 }
 
 .response .response-image {
-  flex: 50% 0 0;
+  width: 50%;
 
   background: url("../img/response-bg.jpg") no-repeat 0% 0%/cover, #686B86;
 }
