--- a/css/style.css
+++ b/css/style.css
@@ -677,8 +677,10 @@ h3 {
   color: #2e357b;
   margin: 10px 0;
 }
+
 .response-form {
-  width: 75%;
+  width: 65%;
+  margin-top: 30px;
 }
 
 .form-col_half {
@@ -695,36 +697,51 @@ h3 {
   margin-bottom: 5px;
 }
 
-.response-form input,
-.response-form textarea{
+form input,
+form select {
   width: 95%;
   margin: 0 0 10px 0;
-  padding: 2px 5px;
+  padding: 5px 5px;
   border: 1px solid #cccccc;
   outline: 0;
+  height: 36px;
 
-  vertical-align: middle;
-  font-size: 16px;
+  line-height: 1;
+  font-family: inherit;
 }
 
-.response-form input:NOT([type="submit"]):focus {
+form input:NOT([type="submit"]):focus,
+form textarea:focus,
+form select:focus{
   border-color: #686B86;
 }
 
-.response-form input[type="submit"] {
-  width: 100px;
-
+form input[type="submit"] {
+  width: auto;
+  padding: 10px;
   color: white;
   background-color: black;
-}
-
-.response-form input {
-  height: 36px;
+  line-height: 0;
 }
 
 .response-form textarea {
   width: 97.5%;
+
 }
+
+/******************************************/
+/************* BOOKING PAGE ***************/
+/******************************************/
+  .booking {
+    margin-top: 10px;
+  }
+  .booking-form {
+    display: flex;
+    flex-flow: row wrap;
+  }
+  .form-col_third {
+    width: 33%;
+  }
 
 
 /*****************************************/
