--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ h3 {
 
 /****************************/
 
+/********* global selectors **************/
 .image-fluid {
   width: 100%;
   height: auto;
@@ -66,7 +67,70 @@ h3 {
   top: 0px;
   z-index: 3;
 }
+/************ form ******************/
+form input,
+form select,
+form textarea{
+  width: 95%;
+  margin: 0 0 10px 0;
+  padding: 5px 5px;
+  border: 1px solid #cccccc;
+  outline: 0;
 
+  line-height: 1;
+  font-family: inherit;
+}
+
+form input,
+form select {
+  height: 36px;
+}
+
+form input:NOT([type="submit"]):focus,
+form textarea:focus,
+form select:focus{
+  border-color: #686B86;
+}
+
+form input[type="submit"] {
+  width: auto;
+  padding: 10px;
+  color: white;
+  background-color: black;
+  line-height: 0;
+}
+
+/******** pagination **************/
+.pagination {
+  display: flex;
+}
+
+.pagination span {
+  display: flex;
+}
+
+.pagination a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+
+  color: black;
+  text-decoration: none;
+  transition: background-color .3s;
+}
+
+.pagination a.active {
+  background-color: #565978;
+  color: white;
+}
+
+.pagination a:hover:not(.active) {
+  background-color: #ddd;
+  cursor: pointer;
+
+}
 /*************************************/
 /*           page header             */
 /************************************/
@@ -697,32 +761,7 @@ h3 {
   margin-bottom: 5px;
 }
 
-form input,
-form select {
-  width: 95%;
-  margin: 0 0 10px 0;
-  padding: 5px 5px;
-  border: 1px solid #cccccc;
-  outline: 0;
-  height: 36px;
 
-  line-height: 1;
-  font-family: inherit;
-}
-
-form input:NOT([type="submit"]):focus,
-form textarea:focus,
-form select:focus{
-  border-color: #686B86;
-}
-
-form input[type="submit"] {
-  width: auto;
-  padding: 10px;
-  color: white;
-  background-color: black;
-  line-height: 0;
-}
 
 .response-form textarea {
   width: 97.5%;
@@ -743,7 +782,13 @@ form input[type="submit"] {
     width: 33%;
   }
 
-
+/******************************************/
+/************* NEWS PAGE ***************/
+/******************************************/
+ .news-view {
+    margin-top: 10px;
+   margin-bottom: 10px;
+ }
 /*****************************************/
 /******* PAGE FOOTER ********************/
 /***************************************/
